trunk/Archive2/cf/b1238ed68aab85/main.cpp


int main(){
    int i = 23424365874344676645345676453;
}